small fix for too much space in Torch Conclusion section

--- a/src/Pages/Torch/Torch.css
+++ b/src/Pages/Torch/Torch.css
@@ -191,7 +191,6 @@ SECTION 3
 .torchSection3 {
     display: flex;
     font-family: var(--fontMontserrat);
-    padding-bottom: 120rem;
     padding-left: 200rem;
     padding-right: 200rem;
 }
